[package]
name = "bg-setter"
version = "0.1.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.4"
lazy_static = "1.4.0"
libc = "0.2.0"
xcb = { version = "0.9.0", features = ["randr","shm"] }
